# rag_bienestar

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  estructura_example  main.py  pyproject.toml
.github/workflows/: deploy.yml
data/: README.md
src/: __init__.py  database.py  rag.py
vectorstore/: .gitkeep  index.faiss  index.pkl
