[project]
name = "rag-bienestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
